[tool.poetry]
name = "olivertwist"
version = "0.1.3"
description = "DBT DAG Auditor"
authors = [
    "Angelos Georgiadis <angelos.georgiadis@autotrader.co.uk>",
    "Paul Doran <paul.doran@autotrader.co.uk>",
    "John Harrison <john.harrison@autotrader.co.uk>",
    "Sam Wedge <sam.wedge@autotrader.co.uk>",
    "Surbhi Verma <surbhi.verma@autotrader.co.uk>",
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/autotraderuk/oliver-twist"
repository = "https://github.com/autotraderuk/oliver-twist"

[tool.poetry.scripts]
olivertwist = "olivertwist.main:main"
ot = "olivertwist.main:main"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
colorama = "^0.4.4"
networkx = "^2.5"
Jinja2 = "2.11.2"
dataclasses = {version = "^0.8", python = "~3.6"}
PyYAML = "^5.3.1"
dataclasses-jsonschema = "^2.13.0"
flake8-bugbear = "^20.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
pre-commit = { version = "^2.9", python = "^3.6.1" }
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
